--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,61 @@
-.App {
-  text-align: center;
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100vh;
+	overflow: hidden;
+	background-color: #f4f4f4;
+	font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+button {
+	margin: 20px auto;
+	color: white;
+	background-color: #333;
+	padding: 10px;
+	font-size: 18ox;
+	border: 1px solid #333;
+	outline: none;
+	cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+img {
+	width: 250px;
+	height: 250px;
+	margin: 10px 0;
+	border-radius: 50%;
+	border: 1px solid #dedede;
 }
 
-.App-link {
-  color: #61dafb;
+.app__user {
+	width: auto;
+	height: auto;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.app__icons {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.app__icons .fas {
+	margin: 0 30px;
+	transition: all 0.2s ease;
+}
+
+.app__icons .fas:hover {
+	transform: scale(1.1);
+	cursor: pointer;
 }
